--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,10 +75,11 @@ span {
     width: 200px;
     height: 200px;
 }
-button{
+button {
+    width: 350px;
     position: relative;
     display: inline-block;
-    padding: 15px 30px;
+    padding: 15px 50px;
     background-color: rgb(37, 36, 36);
     color: #fff;
     font-weight: 400;
@@ -172,6 +173,9 @@ footer{
         font-size: 20px;
     }
     .container input {
+        width: 90%;
+    }
+    button {
         width: 90%;
     }
 }
